# vr-game

./: .gitignore  CMakeLists.txt  imgui.ini  lightsaber.example.toml  lightsaber.scene.toml
.github/prompts/: plan-handTrackingGrabMechanic.prompt.md
shaders/: model.frag  model.vert
src/: io.cpp  main.cpp  model.cpp  object.cpp  physics_world.cpp  renderer.cpp  scene.cpp  stb_image_impl.cpp  xr.cpp
src/include/: camera.hpp  io.hpp  model.hpp  object.hpp  physics_bridge.hpp  physics_world.hpp  player.hpp  renderer.hpp  scene.hpp  xr.hpp
